aggiunta dei commenti e modifica del codice in maniera piu chiara

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="btn">Genera montagna</button>
         </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./provaIndex.js"></script>
     <script>
 
          //dichiaro una variabile globale
